<?xml version="1.0"?>
<package format="2">
  <name>rttest</name>
  <version>0.0.1</version>
  <description>Instrumentation library for real-time performance testing</description>
  <maintainer email="jackie@osrfoundation.org">Jackie Kay</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
