<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>tlsf_cpp</name>
  <version>0.17.0</version>
  <description>C++ stdlib-compatible wrapper around tlsf allocator and ROS2 examples</description>

  <maintainer email="brandon@openrobotics.org">Brandon Ong</maintainer>

  <license>GNU Lesser Public License 2.1</license>
  <license>Apache License 2.0</license>

  <author email="clalancette@openrobotics.org">Chris Lalancette</author>
  <author email="jackie@osrfoundation.org">Jackie Kay</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rmw</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tlsf</build_depend>

  <exec_depend>ament_cmake</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rmw</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tlsf</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>rmw_implementation_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
